# kubeedge-example-device

./: README.md  main.py  pyproject.toml
crds/: led-device-instance.yaml  led-device-mode.yaml
